--- a/1-screening.tex
+++ b/1-screening.tex
@@ -6,6 +6,9 @@
 \chapter{High-throughput Computational Screening of Nanoporous Materials}
 \vspace*{-1\baselineskip}
 
+\todo{change some we in I}
+\todo{add intro/transition to each big section}
+
 \section{Nanoporous Materials}
 
 \subsection{Definition of the concept}
