--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -6,6 +6,9 @@
 \chapter{Thermodynamic Exploration of Xenon/Krypton Separation}
 \vspace*{-1\baselineskip}
 
+\todo{change some we in I}
+\todo{add intro/transition to each big section}
+
 \section{Characterization of Adsorption Equilibrium Properties}
 
 \subsection{Geometrical descriptors}
