--- a/3-fastsim.tex
+++ b/3-fastsim.tex
@@ -6,6 +6,9 @@
 \chapter{Adsorption Energies Sampling}
 \vspace*{-1\baselineskip}
 
+\todo{change some we in I}
+\todo{add intro/transition to each big section}
+
 \section{Voronoi Sampling}
 
 \subsection{Theoretical considerations}
