--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -548,15 +548,15 @@ Not to learn form false data, we need to clean the dataset to remove structures 
 
 \subsection{Next steps}
 
-\todo{coefficient of tortuosity ?}
+In this chapter, I introduced different methods of evaluating the transport properties of an adsorbate inside a nanoporous material. The most accurate method requires much more computational time and personal attention to achieve the best accuracy. For instance, we need to choose carefully the parameters of the MD simulation so that we obtain a mean square displacement data relevant for diffusion coefficient calculation. We managed to perform a screening of diffusion coefficient values for xneon and krypton to find interesting materials that exhibit both good thermodynamic and kinetic separation performance. These values have also been used to serve as a baseline data to test out other methods such as the activation energy detection and an ML model. The final ML model seems to give very promising performance by achieving a root mean square error of only $0.25$ \todo{recheck} on the base-10 logarithm of the diffusion coefficient. This means that we can evaluate quite accurately the order of magnitude of the diffusion properties. This could help quickly identify possible diffusion limitations of a promising material, but also optimize this property for faster equilibration in an adsoprtion based separation. Beyond our study, the techniques developed and to be developed in my work can also apply to membrane separation processes.
 
+Different follow-up studies can be initiated considering the results obtained. For instance, the effect of tortuosity on the diffusion coefficient values and finding relevant ways of defining it remain open questions. We can for example focus on unidimensional channels, where each change of direction can be analyzed to quantify how frequently it appears and the magnitude of the change of direction it makes.\autocite{Bullitt_2003} Another challenge could be measuring different diffusion regimes such as the single-file diffusion that leads to an MSD that has a square root time relation\todo{cite}. The materials with MSD relations other than linear were in fact discarded in our study since we only took materials with high determination coefficients in the linear fit. 
 
-\todo{find higher order relations than the diffusion for 1D frameworks. Is it possible for other D channels?}
-
-\todo{Can be used in breakthrough simulations using RUPTURA and equations that link the diffusion coefficient to the axial dispersion coefficient a key parameter in the breakthrough modeling.}\autocite{Sharma_2023}
+To go beyond standard studies, we can even use the diffusion coefficeint to model the breakthrough experiments which is the closest a lab experiment can get from the industrial adsorption process. The recent development of the RUPTURA software,\autocite{Sharma_2023} enables much more perspectives in the field of modeling. We can for instance calculate the axial dispersion coefficient used in a breakthrough model using transport properties while also injecting the thermodynamic data we have on the adsorption process of xenon and krypton. This gives a real opportunity for experiment-theory comparison in order to start a virtuous feedback loop to improve modeling and help in discovring better materials. 
 
 \todo{Broaden to the study of collective diffusion, Maxwell-stefan, Onsager, etc.}
 
+Here, I presented one aspect that was not taken into account in standard high-throughput screenings for xenon/krypton separation, which is the transport properties. In the next chapter, we will focus on other effects that could help complete the picture in order to be closer to the experimental system. The flexibility of the nanoporous framework can for instance change the adsorption performances.\autocite{Witman_2017} And, the difference in polarizability of xenon and krypton can be better leveraged in the screening procedure if we can properly model it using more high-level theories than the Lennard-Jones potential. Both of these subjects are still at level projects and some results will be presented, but it is mainly a compilation of possible research focuses and solutions that could be brought. 
 
 \OnlyInSubfile{\printglobalbibliography}
 
