--- a/thesis.bib
+++ b/thesis.bib
@@ -3695,3 +3695,16 @@ URL = {https://doi.org/10.1137/0216006},
 	title = {The synthesis of gallium phosphate frameworks with and without fluoride ions present: attempts to direct the synthesis of double four-ring containing materials},
 	journal = {J. Mater. Chem.}
 }
+@article{Bullitt_2003,
+	doi = {10.1109/tmi.2003.816964},
+	url = {https://doi.org/10.1109%2Ftmi.2003.816964},
+	year = 2003,
+	month = {sep},
+	publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+	volume = {22},
+	number = {9},
+	pages = {1163--1171},
+	author = {E. Bullitt and G. Gerig and S.M. Pizer and  Weili Lin and S.R. Aylward},
+	title = {Measuring tortuosity of the intracerebral vasculature from {MRA} images},
+	journal = {IEEE Trans. Med. Imaging} Transactions on Medical Imaging}
+}
