--- a/thesis.bib
+++ b/thesis.bib
@@ -3706,5 +3706,5 @@ URL = {https://doi.org/10.1137/0216006},
 	pages = {1163--1171},
 	author = {E. Bullitt and G. Gerig and S.M. Pizer and  Weili Lin and S.R. Aylward},
 	title = {Measuring tortuosity of the intracerebral vasculature from {MRA} images},
-	journal = {IEEE Trans. Med. Imaging} Transactions on Medical Imaging}
+	journal = {IEEE Trans. Med. Imaging}
 }
